[package]
name = "xelis_hash"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.3", features = ["hazmat"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
thiserror = "1.0.58"
tiny-keccak = { version = "2.0", features = ["k12"] }

[profile.dev]
opt-level = 3
overflow-checks = false

[features]
default = ["nightly"]
nightly = []